# datawizzy

./: .gitignore  README.md  pyproject.toml  template_config.json
datawizzy/: instruction_generator.py  nlp_processor.py  safety.py  setup.py
datawizzy/interfaces/: cli.py  jupyter_extension.py  run_app.py  web_app.py
tests/: test_nlp_processor.py  test_safety.py
