[tool.poetry]
name = "datawizzy"
version = "0.1.0"
description = ""
authors = ["rspringfield91 <rspringfield91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
scikit-learn = "^0.24.0"
transformers = "^4.9.0"
openai = "^0.10.0"
streamlit = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
datawizzy = "datawizzy.interfaces.cli:main"
datawizzy-app = "datawizzy.interfaces.web_app:main"